--- a/src/PanelControl.css
+++ b/src/PanelControl.css
@@ -14,6 +14,8 @@
   justify-content: space-around;
   align-items: center;
   flex-direction: column;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
 }
 
 .panel-control-aside div {
@@ -39,4 +41,21 @@
   align-items: center;
   width: 90%;
   height: 60%;
+}
+
+.panel-control-aside nav ul {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  gap: 10px;
+  flex-direction: column;
+}
+
+.panel-control-aside nav ul li {
+  width: 80%;
+  height: 50px;
+  background-color: white;
 }
