--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background-image: url('/1202.jpg');
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
