--- a/src/PanelControl.css
+++ b/src/PanelControl.css
@@ -59,3 +59,42 @@
   height: 50px;
   background-color: white;
 }
+
+.panel-control-section {
+  width: 70%;
+  height: 100vh;
+  background-color: white;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.panel-control-card {
+  width: 300px;
+  height: 350px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+
+.panel-control-card section:first-child {
+  width: 100%;
+  height: 70%;
+  background-color: #123D6E;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+}
+
+.panel-control-card section:last-child {
+  width: 100%;
+  height: 30%;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
+}
