--- a/src/PanelControl.css
+++ b/src/PanelControl.css
@@ -86,6 +86,11 @@
   background-color: #123D6E;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 
 .panel-control-card section:last-child {
